# open-music-sync

./: README.md  pyproject.toml
src/oms/: __main__.py  constants.py
src/oms/players/: jellyfin.py  mpd.py  player.py  subsonic.py
